# imageRegistrator

./: CMakeLists.txt  main.cpp
include/: imageRegistrator.hpp  utils.hpp
src/: imageRegistrator.cpp  main.cpp  utils.cpp
